// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`i18nContentSchema > should extend the schema 1`] = `"{"def":{"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"fr":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"de":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}}},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]},"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"fr":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"de":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}}},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]}"`;

exports[`i18nContentSchema > should extend the schema 2`] = `
{
  "de": ZodString {
    "base64": [Function],
    "base64url": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "format": null,
    "guid": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "maxLength": null,
    "minLength": null,
    "nanoid": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "type": "string",
    "ulid": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
  },
  "en": ZodString {
    "base64": [Function],
    "base64url": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "format": null,
    "guid": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "maxLength": null,
    "minLength": null,
    "nanoid": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "type": "string",
    "ulid": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
  },
  "fr": ZodString {
    "base64": [Function],
    "base64url": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "format": null,
    "guid": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "maxLength": null,
    "minLength": null,
    "nanoid": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "type": "string",
    "ulid": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "xid": [Function],
  },
}
`;

exports[`i18nContentSchema > should extend the schema and make partial if option is set 1`] = `"{"def":{"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"fr":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"de":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"}},"checks":[]},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]},"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"fr":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"de":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"}},"checks":[]},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]}"`;

exports[`i18nContentSchema > should extend the schema and make partial if option is set 2`] = `
{
  "de": ZodOptional {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "base64": [Function],
        "base64url": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "format": null,
        "guid": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "maxLength": null,
        "minLength": null,
        "nanoid": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "type": "string",
        "ulid": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "optional",
    "unwrap": [Function],
  },
  "en": ZodOptional {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "base64": [Function],
        "base64url": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "format": null,
        "guid": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "maxLength": null,
        "minLength": null,
        "nanoid": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "type": "string",
        "ulid": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "optional",
    "unwrap": [Function],
  },
  "fr": ZodOptional {
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "base64": [Function],
        "base64url": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "format": null,
        "guid": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "maxLength": null,
        "minLength": null,
        "nanoid": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "type": "string",
        "ulid": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "encode": [Function],
    "encodeAsync": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "toJSONSchema": [Function],
    "type": "optional",
    "unwrap": [Function],
  },
}
`;
